[gd_scene load_steps=4 format=3 uid="uid://cj17mi4hgee02"]

[ext_resource type="Script" path="res://main.gd" id="1_hjdc6"]
[ext_resource type="Script" path="res://view_model.gd" id="2_wd474"]
[ext_resource type="Script" path="res://model_info_panel.gd" id="3_kvk5f"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_hjdc6")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="SearchLineEdit" type="LineEdit" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Поиск"

[node name="ModelContainer" type="HBoxContainer" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ModelList" type="ItemList" parent="HSplitContainer/VBoxContainer/ModelContainer"]
custom_minimum_size = Vector2(300, 550)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonContainer" type="HBoxContainer" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="SelectProjectButton" type="Button" parent="HSplitContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "SelectProject"

[node name="HBoxContainer2" type="HBoxContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HSplitContainer/HBoxContainer2"]
layout_mode = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="HSplitContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_wd474")

[node name="SubViewport" type="SubViewport" parent="HSplitContainer/HBoxContainer2/VBoxContainer2/SubViewportContainer"]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(550, 580)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="HSplitContainer/HBoxContainer2/VBoxContainer2/SubViewportContainer/SubViewport"]
unique_name_in_owner = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="HSplitContainer/HBoxContainer2/VBoxContainer2/SubViewportContainer/SubViewport"]

[node name="HSplitContainer_ControlsRow" type="HBoxContainer" parent="HSplitContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2

[node name="PlayPauseButton" type="Button" parent="HSplitContainer/HBoxContainer2/VBoxContainer2/HSplitContainer_ControlsRow"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "▶"

[node name="HSplitContainer_TimelineSlider" type="HSlider" parent="HSplitContainer/HBoxContainer2/VBoxContainer2/HSplitContainer_ControlsRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/HBoxContainer2"]
layout_mode = 2

[node name="ModelInfoPanel" type="Panel" parent="HSplitContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
script = ExtResource("3_kvk5f")

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/HBoxContainer2/HBoxContainer/ModelInfoPanel"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 110.0
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="HSplitContainer/HBoxContainer2/HBoxContainer/ModelInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Информация"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/HBoxContainer2/HBoxContainer/ModelInfoPanel/VBoxContainer"]
layout_mode = 2

[node name="FileNameLabel" type="Label" parent="HSplitContainer/HBoxContainer2/HBoxContainer/ModelInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Файл: "
autowrap_mode = 3

[node name="TypeLabel" type="Label" parent="HSplitContainer/HBoxContainer2/HBoxContainer/ModelInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Тип: "

[node name="SizeLabel" type="Label" parent="HSplitContainer/HBoxContainer2/HBoxContainer/ModelInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Размер: "

[node name="DateModifiedLabel" type="Label" parent="HSplitContainer/HBoxContainer2/HBoxContainer/ModelInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Изменен: "

[node name="VerticesLabel" type="Label" parent="HSplitContainer/HBoxContainer2/HBoxContainer/ModelInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Вершин: "

[node name="FacesLabel" type="Label" parent="HSplitContainer/HBoxContainer2/HBoxContainer/ModelInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Граней: "

[node name="MaterialsLabel" type="Label" parent="HSplitContainer/HBoxContainer2/HBoxContainer/ModelInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Материалов: "

[node name="PathLabel" type="Label" parent="HSplitContainer/HBoxContainer2/HBoxContainer/ModelInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Путь: "
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="HSplitContainer/HBoxContainer2/HBoxContainer/ModelInfoPanel/VBoxContainer"]
layout_mode = 2

[node name="MaterialsSection" type="VBoxContainer" parent="HSplitContainer/HBoxContainer2/HBoxContainer/ModelInfoPanel/VBoxContainer"]
layout_mode = 2

[node name="MaterialsHeader" type="Label" parent="HSplitContainer/HBoxContainer2/HBoxContainer/ModelInfoPanel/VBoxContainer/MaterialsSection"]
layout_mode = 2
text = "Материалы:"

[node name="MaterialsList" type="VBoxContainer" parent="HSplitContainer/HBoxContainer2/HBoxContainer/ModelInfoPanel/VBoxContainer/MaterialsSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="TexturesSection" type="VBoxContainer" parent="HSplitContainer/HBoxContainer2/HBoxContainer/ModelInfoPanel/VBoxContainer"]
layout_mode = 2

[node name="TexturesHeader" type="Label" parent="HSplitContainer/HBoxContainer2/HBoxContainer/ModelInfoPanel/VBoxContainer/TexturesSection"]
layout_mode = 2
text = "Текстуры:"

[node name="TexturesList" type="VBoxContainer" parent="HSplitContainer/HBoxContainer2/HBoxContainer/ModelInfoPanel/VBoxContainer/TexturesSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="AnimationsSection" type="VBoxContainer" parent="HSplitContainer/HBoxContainer2/HBoxContainer/ModelInfoPanel/VBoxContainer"]
layout_mode = 2

[node name="AnimationsHeader" type="Label" parent="HSplitContainer/HBoxContainer2/HBoxContainer/ModelInfoPanel/VBoxContainer/AnimationsSection"]
layout_mode = 2
text = "Анимации:"

[node name="AnimationsList" type="VBoxContainer" parent="HSplitContainer/HBoxContainer2/HBoxContainer/ModelInfoPanel/VBoxContainer/AnimationsSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="FileDialog" type="FileDialog" parent="."]
size = Vector2i(303, 180)
